# http/routes.go
@@ -7,5 +7,11 @@ func (s *Server) loadRoutes() {
 	s.Router.Patch("/api/v1/users/{userID}", s.handleUsersUpdate())
 	s.Router.Delete("/api/v1/users/{userID}", s.handleUsersDelete())
 
+	s.Router.Get("/api/v1/clients", s.handleClientsList())
+	s.Router.Post("/api/v1/clients", s.handleClientsCreate())
+	s.Router.Get("/api/v1/clients/{clientID}", s.handleClientsGet())
+	s.Router.Patch("/api/v1/clients/{clientID}", s.handleClientsUpdate())
+	s.Router.Delete("/api/v1/clients/{clientID}", s.handleClientsDelete())
+
 	s.Router.Post("/api/v1/auth/login", s.handleAuthLogin())
 }
